<resources>
    <string name="app_name">Trashare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="judul">PANDUAN PENDIRIAN BANK SAMPAH</string>
    <string name="judulpanduan">PANCASILA</string>
    <string name="panduan"> \n
        1. Ketuhanan Yang Maha Esa\n
        2. Kemanusiaan yang adil dan beradab\n
        3. Persatuan Indonesia\n
        4. Kerakyatan yang dipimpin oleh hikmat kebijaksanaan dalam permusyawaratan/perwakilan\n
        5. Keadilan sosial bagi seluruh bangsa Indonesia
    </string>

    <string-array name="tipe_pengguna">
        <item>Member</item>
        <item>Pengurus</item>
        <item>Yayasan</item>
    </string-array>

    <string-array name="lokasi">
        <item>Pamulang</item>
        <item>Tangerang Kota</item>
        <item>Tangerang Selatan</item>
        <item>Legok</item>
        <item>Tiga Raksa</item>
        <item>Kali Deres</item>
    </string-array>
    <!--untuk user, member, pengurus, dan yayasan-->
    <string name="menu_beranda">Beranda</string>

    <!--untuk member, pengurus, dan yayasan-->
    <string name="menu_keluar">Keluar</string>
    <string name="menu_profil">Profil Saya</string>

    <!--untuk menu user-->
    <string name="menu_register">Registrasi Bank Sampah</string>
    <string name="menu_gabung">Bergabung</string>
    <string name="menu_masuk">Masuk</string>

    <!--untuk menu member-->
    <string name="menu_listBS">Daftar Bank Sampah</string>
    <string name="menu_poin">Poin Saya</string>
    <string name="menu_notif">Notifikasi</string>
    <string name="menu_tabungan">Tabungan Saya</string>

    <!--untuk menu pengurus-->
    <string name="menu_kegiatan">Pengaturan Kegiatan</string>
    <string name="menu_jadwal">Jadwal Penimbangan</string>
    <string name="menu_input">Input Sampah Nasabah</string>

    <!--untuk menu yayasan-->
    <string name="menu_tipe_harga">Tipe dan Harga Sampah</string>
    <string name="menu_lihat_kegiatan">Kegiatan</string>
    <string name="menu_hadiah">Pengaturan Hadiah</string>

    <!--untuk dialog box input sampah-->
    <string name="tipe_sampah_hint">Pilih tipe sampah</string>
    <string name="berat_sampah_hint">Masukkan berat sampah</string>
    <string-array name="tipe_list">
        <item>Pilih tipe sampah...</item>
        <item>Koran</item>
        <item>Botol</item>
        <item>Besi</item>
        <item>Kayu</item>
        <item>Plastik</item>
        <item>Aluminium</item>
    </string-array>

    <string name="tambah">Tambah</string>
    <string name="kembali">Kembali</string>
    <string name="title_activity_detail_bsmap">Map</string>
    <string name="title_activity_poin_member">PoinMemberActivity</string>
    <string name="tab_text_1">Poin</string>
    <string name="tab_text_2">Histori</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
